// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "../pb;pb";

package pb;

// 常量定义
enum Constant {
	Constant_NULL = 0;
	MsgHead_Len = 10;			// 消息头的长度
	MsgMaxBody_Len = 1024000;	// 最大的消息体长度
}

// 消息ID
enum MessageId {
	MessageId_NULL = 0;

	// 同步
	Sync_S2C_QuoteItem = 1000;	// 同步实时行情

	// 请求
	Req_QuoteSubscribe = 2001;	// 订阅或取消订阅行情
	Rep_QuoteSubscribe = 2002;	// 订阅或取消订阅行情响应
	Req_QuoteQuery = 2003;		// 查询行情
	Rep_QuoteQuery = 2004;		// 查询行情响应(无响应)
}

// 错误编码
enum ErrorCode {
	CS_OK = 0;
	CS_UNKNOW = 1;
	CS_SERVER_ERROR = 2;
	CS_INVALID_PARAMETER = 3;
	CS_INVALID_ACCOUNT = 4;
	CS_INVALID_PASSWORD = 5;
}

message MessageHead {
	fixed32 message_id = 1;	// 消息ID
	sfixed32 body_len = 2;	// 消息体长度
}

message ErrorInfo {
	int32 code = 1;
	string err = 2;
}

message MessageSpan {
  sfixed64 send = 1;
  sfixed64 recv = 2;
}

// 空请求
message VoidRequest {
}

// 空响应
message VoidReply {
}

// 对时请求
message PingRequest {
  MessageSpan client = 1;
}

// 对时响应
message PingReply {
  MessageSpan client_span = 1;
  MessageSpan server_span = 2;
  sfixed64 server_cur_time = 3;
}

// 服务器信息
message ServerInfo {
	sfixed64 timestamp = 1;
}

message SessionInfo {
  fixed64 player_id = 1;	// 玩家ID
  string session_id = 2;	// 会话ID
}

// 游戏服务器信息
message GameServerInfo {
	string node_id = 1;
	string node_name = 2;
	uint32 node_port = 3;
	int32 total_player = 4;
}

// 游戏服务器列表
message GameServerList {
	repeated GameServerInfo servers = 1;
}

// 公共服务
service Utility {
  rpc Ping (PingRequest) returns (PingReply) {}
}
